ing/fastcampus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastcampus-http
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: svc.fastcampus.k8s
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-page
            port:
              number: 5678
  - host: cloud.fastcampus.k8s
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cloud-page
            port:
              number: 5678
