ing/hello-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-hello
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello-app
        pathType: Prefix
        backend:
          service:
            name: hello-app-svc
            port:
              number: 5678
